# Algor

./: .gitignore  CMakeLists.txt  Main.cpp  temp.cpp
acwing/base/1/: 100.cpp  106.cpp  113.cpp  1273.cpp  90.cpp  95.cpp  97.cpp  99.cpp
acwing/contest/18/: a.cpp  b.cpp  c.cpp
acwing/contest/40/: a.cpp  b.cpp  c.cpp
acwing/contest/41/: a.cpp  b.cpp  c.cpp
acwing/contest/42/: a.cpp  b.cpp
atcoder/150/: c.cpp  d.cpp  e.cpp  f.cpp  tempCodeRunnerFile.cpp
atcoder/219/: A.cpp
atcoder/220/: C.cpp  E.cpp
atcoder/378/: a.cpp  b.cpp  c.cpp  d.cpp
atcoder/379/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  tempCodeRunnerFile.cpp
atcoder/90questions/: 005-1.cpp  005-2.cpp  005-3.cpp
codeforces/: 1328C.cpp  1339B.cpp  1343C.cpp  1343C_LJ.cpp  1352B.cpp  1352B_LJ.cpp  1352C.cpp  1354B.cpp  1355A.cpp  1363A.cpp  1364A.cpp  1385C.cpp  1385C_LJ.cpp  1399C.cpp  1472D.cpp  1485B.cpp  1487B.cpp  1490D.cpp  1491B.cpp  1495A.cpp  1497B.cpp  1497C1.cpp  1504B.cpp  1510K.cpp  1512C.cpp  1512D.cpp  1514B.cpp  1517B.cpp  1520D.cpp  1527B1.cpp  1530C.cpp  1536B.cpp  1537C.cpp  1539C.cpp  1541B.cpp  1546B.cpp  1553C.cpp  1559C.cpp  1578E.cpp  1581B.cpp  (+34 more)
codeforces/10月/08/: 1738B.cpp  914B.cpp  959B.cpp  tempCodeRunnerFile.cpp
codeforces/10月/09/: 1023A.cpp  344B.cpp  934B.cpp
codeforces/12/: a.txt
leetcode/: 0921.cpp  0922.cpp  0923.cpp  0924.cpp  0925.cpp
leetcode/code/: 122.cpp  45.cpp  55.cpp  650.cpp  673.cpp
leetcode/lcp2021team/: lcp44.cpp  lcp45.cpp  lcp46.cpp  lcp47.cpp  lcp48.cpp  lcp49.cpp
leetcode/sql/: summary.md
run/: sol.cpp  solve.cpp
(+949 files in other folders)
